faq, has bug - cards overlap navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body {
     background-color: black;
     font-weight: bold;
     width: 100%;
+    z-index: 9999;
 }
 
 .nav-link {
@@ -161,6 +162,14 @@ header {
     padding: 30px 0;
 }
 
+.section-body {
+    width: 100%;
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+}
+
 .full-height {
     width: 100%;
     height: 100vh;
@@ -170,10 +179,10 @@ header {
     /*background: linear-gradient(to right, rgb(178, 242, 244), rgb(178, 244, 185));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;*/
-    background-color: rgb(255, 255, 255, 0.5);
+    /*background-color: rgb(255, 255, 255, 0.5);*/
     color: black;
-    border-top-left-radius:50%;
-    border-top-right-radius:50%;
+    /* border-top-left-radius:50%;
+    border-top-right-radius:50%;*/
 }
 
 .logo {
@@ -190,7 +199,40 @@ header {
     position: relative;
 }
 
+/*faq*/
 
+.custom-container {
+  width:100%;
+}
+
+.faqtitle{
+  padding-top: 100px;
+}
+
+.spacing {
+  padding-bottom: 50px;
+}
+
+.topfaq {
+    background-color: rgb(66, 91, 206, 0.5);
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+}
+
+.middlefaq {
+   background-color: rgb(66, 91, 206, 0.5);
+}
+
+.bottomfaq {
+    background-color: rgb(66, 91, 206, 0.5);
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+}
+
+.card {
+    padding: 20px 10px;
+    margin-bottom: 20px;
+}
 
 @media screen and (max-width:767px) {
 
